--- a/src/containers/NftDetailPage/Bid/Bid.module.sass
+++ b/src/containers/NftDetailPage/Bid/Bid.module.sass
@@ -8,8 +8,8 @@
     margin-top: 20px
     padding: 24px
     border-radius: 8px
-    background: rgba($pink, .08)
-    color: $pink
+    background: rgba($blue, .08)
+    color: $blue
     +m
         align-items: stretch
 
@@ -21,7 +21,7 @@
     width: 32px
     margin-right: 16px
     svg
-        fill: $pink
+        fill: $blue
 .info
     margin-bottom: 32px
     +body-2
