--- a/src/containers/NftDetailPage/Checkout/Checkout.module.sass
+++ b/src/containers/NftDetailPage/Checkout/Checkout.module.sass
@@ -46,8 +46,8 @@
     margin-top: 20px
     padding: 24px
     border-radius: 8px
-    background: rgba($pink, .08)
-    color: $pink
+    background: rgba($blue, .08)
+    color: $blue
     +m
         align-items: stretch
 
@@ -56,7 +56,7 @@
     width: 32px
     margin-right: 16px
     svg
-        fill: $pink
+        fill: $blue
 
 .details
     flex-grow: 1
