--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -297,15 +297,23 @@
 }
 
 .dropdown-content {
+  left: 50%;
+  transform: translateX(-50%);
   display: none;
   position: absolute;
-  min-width: 160px;
+  min-width: 150px;
+  border-radius: 1.5rem;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+
+  &.avatar-dropdown-content {
+    left: auto;
+    transform: none;
+  }
 }
 
 .dropdown-content a {
-  padding: 9px 16px;
+  padding: 0.4rem 1rem;
   text-decoration: none;
   display: block;
 }
@@ -320,4 +328,65 @@
 
 .clear-icon {
   margin: 0 14px 0 0 !important;
+}
+
+.model-viewer-loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.shopping-cart {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 !important;
+  inset: 0px;
+  z-index: 999;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out 0s;
+  background-color: rgba(0, 0, 0, 0.6);
+  overflow: hidden;
+}
+
+.shopping-cart-container {
+  position: fixed;
+  right: 32px;
+  bottom: 24px;
+  z-index: 9999;
+  width: 375px;
+  height: calc((100% - 48px));
+  background-color: white;
+  border: 1px solid rgb(227, 227, 227);
+  border-radius: 16px;
+  overflow: auto;
+  filter: drop-shadow(rgba(0, 0, 0, 0.25) 0px 4px 4px);
+  transition: transform 0.2s ease 0s, opacity 0.2s ease 0s;
+  visibility: visible;
+  transform: translate3d(0px, 0px, 0px);
+  opacity: 1;
+}
+
+.shopping-cart-header {
+  width: 100%;
+  padding: 24px;
+  max-height: 100%;
+  overflow: hidden auto;
+  border-bottom: 1px solid #e8e9eb;
+}
+
+.shopping-cart-body {
+  width: 100%;
+  padding: 24px;
+  height: 100%;
+  overflow: hidden auto;
+  max-height: calc(100% - 80px);
+  min-height: 50%;
+}
+
+.shopping-cart-footer {
+  width: 100%;
+  padding: 24px;
 }
