--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,8 @@
   border-radius: 16px;
   overflow: hidden;
 }
+
+.text-description {
+  font-size: 0.875rem !important;
+  line-height: 1rem !important;
+}
